unpackaged/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LastPositionDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__LastPositionDateTime__c</fullName>
    <inlineHelpText>Horodatage du dernier message de géolocalisation reçu.</inlineHelpText>
    <label>Last Position Date/Time</label>
    <type>DateTime</type>
</CustomField>