unpackaged/main/default/objects/maps__LiveIoTDevice__c/fields/maps__LastPositionUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>maps__LastPositionUpdateDateTime__c</fullName>
    <inlineHelpText>Horodatage de cet enregistrement de dernière position mis à jour par lot.</inlineHelpText>
    <label>Batch Date/Time of Last Position</label>
    <type>DateTime</type>
</CustomField>