unpackaged/main/default/objects/maps__LiveIoTDevice__c/fields/maps__Location__c.field-meta.xml
<CustomField>
    <fullName>maps__Location__c</fullName>
    <inlineHelpText>Géolocalisation de la dernière position reçue.</inlineHelpText>
    <label>Last Position</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>