unpackaged/main/default/objects/maps__LiveIoTDevice__c/fields/maps__OdometerKm__c.field-meta.xml
<CustomField>
    <fullName>maps__OdometerKm__c</fullName>
    <description>Last available odometer reading, in kilometers</description>
    <inlineHelpText>Dernière lecture disponible de l&#39;odomètre, en kilomètres</inlineHelpText>
    <label>Odometer (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>